Dockerfile: Run the command with an unprivileged user.